--- a/index.html
+++ b/index.html
@@ -6,5 +6,21 @@
     <title>Card</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <img
+        src="https://media.urgente24.com/p/e94a32fa9bc25a9f5995c58c5af7b554/adjuntos/319/imagenes/002/605/0002605503/seleccion-argentina.jpg"
+        alt="Scalonetta"
+      />
+      <div class="card">
+        <div class="card-header">
+          <img
+            src="https://www.elgrafico.com.ar/media/cache/pub_news_details_large/media/i/06/29/0629a38c619544dc3519865026559c5cdcf70ef7.jfif"
+            alt="Messi"
+          />
+        </div>
+        <div class="card-body"></div>
+      </div>
+    </div>
+  </body>
 </html>
