--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
             src="https://www.elgrafico.com.ar/media/cache/pub_news_details_large/media/i/06/29/0629a38c619544dc3519865026559c5cdcf70ef7.jfif"
             alt="Messi"
           />
+          <h1 class="">Lionel Messi</h1>
         </div>
-        <div class="card-body"></div>
+        <div class="card-body">
+          <h2>Info Personal</h2>
+          <p>Edad: 36</p>
+          <p>Pais: Argentina</p>
+          <p>Posicion: Delantero</p>
+        </div>
       </div>
     </div>
   </body>
